Fixed major elastic scroll bug on iOS and minor fixes to agenda screen after rework

--- a/BeyondResponsiveDesign.Menus/styles/transforms.less
+++ b/BeyondResponsiveDesign.Menus/styles/transforms.less
@@ -73,7 +73,7 @@ body > main > article > div.slideTabContainer {
     }
 }
 
-article > section > nav.toolbar > ul > li {
+body > main > article > nav.toolbar > ul > li {
     > .highlight {
         display: block;
     }
